More admin delete view changes

--- a/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/eliminarNoticies.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/eliminarNoticies.html.twig
@@ -8,11 +8,11 @@
 	      	<div class="modal-body"> 	
 		      	<strong class="text-danger">S'eliminarà la notícia amb la següent informació:</strong>
 		      	<div class="space10"></div>
-		        <label>Títol</label>
+		        <label class="text-danger">Títol</label>
 				<p>{{ noticia.titol }} </p>
 		        <div class="space10"></div>
 		        
-		        <label>Contingut</label>
+		        <label class="text-danger">Contingut</label>
 				<p>{{ noticia.contingut }} </p>
 	        </div>
 	        <div class="modal-footer">
