--- a/src/ADG/ArxiuBundle/Resources/views/Documents/detall.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Documents/detall.html.twig
@@ -48,7 +48,7 @@
         </div>
         <div class="modal-footer">
         	<button class="btn btn-default" onclick="imprimir('#detall-doc')" ><i class="icon-print"></i>&nbsp;Imprimir</button>
-          	<button class="btn btn-default" data-dismiss="modal">Tancar</button>
+          	<button class="btn btn-default" data-dismiss="modal">{{ 'dispenses.detall.tancar' | trans }}</button>
         </div>
 
       </div><!-- /.modal-content -->
