--- a/src/ADG/ArxiuBundle/Resources/views/Documents/documents.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Documents/documents.html.twig
@@ -96,10 +96,10 @@
 				<table class="table table-striped table-bordered table-hover imprimir" id="documents_table">
 			        <thead>
 			            <tr>
-			                <th class="centered-text" id="idHeader" title="Tooltip!">Classificació de l'arxiu</th>
-			                <th class="centered-text">Data</th>
-			                <th class="centered-text">Descripció</th>
-						    <th class="noimprimir centered-text">Operacions</th>            
+			                <th class="centered-text" id="idHeader" title="Tooltip!">{{ 'documents.cerca.classificacio' | trans }}</th>
+			                <th class="centered-text">{{ 'documents.cerca.data' | trans }}</th>
+			                <th class="centered-text">{{ 'documents.taula.descripcio' | trans }}</th>
+						    <th class="noimprimir centered-text">{{ 'documents.taula.operacions' | trans }}</th>            
 			            </tr>
 			        </thead>
 		            <tbody>
