--- a/src/ADG/ArxiuBundle/Resources/views/Parroquies/cercaArxius.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Parroquies/cercaArxius.html.twig
@@ -1,15 +1,15 @@
-<div class="panel-heading"><h4 style="margin-top:-3px;margin-bottom:-3px">Cercar arxius dipositats</h4></div>
+<div class="panel-heading"><h4 style="margin-top:-3px;margin-bottom:-3px">{{ 'parroquies.cercar2' | trans }}</h4></div>
 
 <div class="panel-body">
 	<form action="{{ path('parroquies_arxius_cerca') }}" method="post">
 		<div class="row">
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-			  	<h5>Classificació</h5>
+			  	<h5>{{ 'parroquies.cerca.classificacio' | trans }}</h5>
 			  	<div class="input-group">
 					<span class="input-group-addon"><i class="icon-archive"></i></span>
 					<input type="text" class="form-control search-query" name="nodac" value="{{ nodac }}">
 				</div>
-				<h5>Data</h5>
+				<h5>{{ 'parroquies.cerca.data' | trans }}</h5>
 				<div class="input-group">
 					<span class="input-group-addon"><i class="icon-calendar"></i></span>
 					<input type="text" class="form-control search-query" name="data" value="{{ data }}">
@@ -17,12 +17,12 @@
 				<div class="space10"></div>
 		  	</div>
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-			  	<h5>Nom</h5>
+			  	<h5>{{ 'parroquies.cerca.nom' | trans }}</h5>
 			  	<div class="input-group">
 					<span class="input-group-addon"><i class="icon-picture"></i></span>
 					<input type="text" class="form-control search-query" name="nom" value="{{ nom }}">
 				</div>
-				<h5>Paraula clau</h5>
+				<h5>{{ 'parroquies.cerca.paraula' | trans }}</h5>
 				<div class="input-group">
 					<span class="input-group-addon"><i class="icon-flag"></i></span>
 					<input type="text" class="form-control search-query" name="paraula" value="{{ paraula }}">
@@ -33,7 +33,7 @@
 		</div><!-- /.row -->
 
 		<div class="btn-group">
-			<button type="submit" class="btn btn-primary"><i class="icon-search"></i>&nbsp;Cercar</button>
+			<button type="submit" class="btn btn-primary"><i class="icon-search"></i>&nbsp;{{ 'llistat.cerca.buscar' | trans }}</button>
 		</div>
 		{% if is_granted('ROLE_ADMIN') %}
 			<div class="btn-group">	
