--- a/src/ADG/ArxiuBundle/Resources/views/Parroquies/parroquiesArxius.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Parroquies/parroquiesArxius.html.twig
@@ -96,11 +96,11 @@
 					<table class="table table-striped table-bordered table-hover imprimir" id="parroquies_table">
 				        <thead>
 				            <tr>
-				                <th class="centered-text" id="idHeader" title="Tooltip!">Classificació</th>
-				                <th class="centered-text">Data</th>
-				                <th class="centered-text">Nom</th>
-				                <th class="centered-text">Titol</th>
-							    <th class="centered-text noimprimir">Operacions</th>            
+				                <th class="centered-text" id="idHeader" title="Tooltip!">{{ 'parroquies.taula.classificacio' | trans }}</th>
+				                <th class="centered-text">{{ 'parroquies.taula.data' | trans }}</th>
+				                <th class="centered-text">{{ 'parroquies.taula.nom' | trans }}</th>
+				                <th class="centered-text">{{ 'parroquies.taula.titol' | trans }}</th>
+							    <th class="centered-text noimprimir">{{ 'parroquies.taula.operacions' | trans }}</th>            
 				            </tr>
 				        </thead>
 			            <tbody>
