Apdated asset link to upperCase

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <title>{% block title %}{% endblock %} | {{ 'base.title' | trans }}</title>
           
-        <link href="{{ asset('bundles/adg/css/font-awesome.css') }}" rel="stylesheet">
-        <link href="{{ asset('bundles/adg/css/bootstrap.min.css') }}" rel="stylesheet">
-		<link href="{{ asset('bundles/adg/css/comu.css') }}" rel="stylesheet">
+        <link href="{{ asset('bundles/ADG/css/font-awesome.css') }}" rel="stylesheet">
+        <link href="{{ asset('bundles/ADG/css/bootstrap.min.css') }}" rel="stylesheet">
+		<link href="{{ asset('bundles/ADG/css/comu.css') }}" rel="stylesheet">
         {% block stylesheets %}{% endblock %}
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,9 +41,9 @@
  			{% include '::footer.html.twig' %}
 		  </div>
 		
-	    <script src="{{ asset('bundles/adg/js/jquery.js') }}" type="text/javascript"></script>
-	    <script src="{{ asset('bundles/adg/js/bootstrap.min.js') }}" type="text/javascript"></script>
-	    <script src="{{ asset('bundles/adg/js/printThis.js') }}" type="text/javascript"></script>
+	    <script src="{{ asset('bundles/ADG/js/jquery.js') }}" type="text/javascript"></script>
+	    <script src="{{ asset('bundles/ADG/js/bootstrap.min.js') }}" type="text/javascript"></script>
+	    <script src="{{ asset('bundles/ADG/js/printThis.js') }}" type="text/javascript"></script>
 	    <script type="text/javascript">
 		    function imprimir(name)
 			{
