--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,7 +16,7 @@
     <body>
 	     <div class="navbar navbar-inverse navbar-fixed-top " role="navigation">	
 			    <div class="navbar-header">
-				    <a class="navbar-brand" href="{{ path('index') }}"">{{ 'base.title' | trans }}</a>
+				    <a class="navbar-brand" href="{{ path('index') }}">{{ 'base.title' | trans }}</a>
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 				      <span class="sr-only">Toggle navigation</span>
 				      <span class="icon-bar"></span>
