Fixed missing section from Documents Adlimina
· Added full spanish translation
· Added iframe to biblioteca

--- a/src/ADG/ArxiuBundle/Resources/views/Documents/menuLateral.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Documents/menuLateral.html.twig
@@ -39,6 +39,7 @@
 			      	<a class="list-group-item lateral{% if seleccio is sameas("lleida") %} active{% endif %}" href="{{ path('documents_select', { 'seleccio': 'lleida' }) }}">Lleida</a>
 			      	<a class="list-group-item lateral{% if seleccio is sameas("solsona") %} active{% endif %}" href="{{ path('documents_select', { 'seleccio': 'solsona' }) }}">Solsona</a>
 			      	<a class="list-group-item lateral{% if seleccio is sameas("tarragona") %} active{% endif %}" href="{{ path('documents_select', { 'seleccio': 'tarragona' }) }}">Tarragona</a>
+			      	<a class="list-group-item lateral{% if seleccio is sameas("tortosa") %} active{% endif %}" href="{{ path('documents_select', { 'seleccio': 'tortosa' }) }}">Tortosa</a>
 			      	<a class="list-group-item lateral{% if seleccio is sameas("urgell") %} active{% endif %}" href="{{ path('documents_select', { 'seleccio': 'urgell' }) }}">Urgell</a>
 			      	<a class="list-group-item lateral{% if seleccio is sameas("vic") %} active{% endif %}" href="{{ path('documents_select', { 'seleccio': 'vic' }) }}">Vic</a>
 			    </ul>
