--- a/src/ADG/ArxiuBundle/Resources/views/Documents/infoAdlimina.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Documents/infoAdlimina.html.twig
@@ -7,7 +7,7 @@
 			  	<div class="imprimir" id="adlimina">
 			  		{% for i in info %}
 						<h4>{{ i.nodac }} - {{ i.titol }}</h4>
-						<p>{{ i.texte }}</p>
+						<pre>{{ i.texte }}</pre>
 						{% if is_granted('ROLE_ADMIN') %}
 						    <div class="row noimprimir">     
 				              	<div class="btn-group" style="margin-right:15px;float:right;">
