--- a/src/ADG/BibliotecaBundle/Resources/views/Default/index.html.twig
+++ b/src/ADG/BibliotecaBundle/Resources/views/Default/index.html.twig
@@ -6,12 +6,5 @@
 	<div class="page-header">
         <h1>Biblioteca</h1>
 	</div>
-	<div class="row">
-		<div class="col-md-7 col-lg-7">
-			<em>en construcció...</em>
-		
-		</div>
-		<div class="col-md-5 col-lg-5">
-		</div>
-	</div>
+	<iframe src="http://www.arxiuadg.org/biblioteca" style="width:100%; height: 100%"></iframe>
 {% endblock %}
