Updated index with multiple primary key

--- a/src/ADG/ArxiuBundle/Resources/views/Llistat/llistat.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Llistat/llistat.html.twig
@@ -150,10 +150,10 @@
 			                    	<td style="min-width: 100px">{{ i.nom }}</td>
 			                        <td >{{ i.nodac }}</td>
 		                        	<td class="noimprimir">
-		                        		<a data-toggle="modal" href="{{  path('llistat_detall', {'id':i.num}) }}" data-target="#ampliarInfo" class="btn btn-sm btn-info" type="button"><i class="icon-info"></i></a>
+		                        		<a data-toggle="modal" href="{{  path('llistat_detall', {'nom': i.nom, 'id':i.num}) }}" data-target="#ampliarInfo" class="btn btn-sm btn-info" type="button"><i class="icon-info"></i></a>
 			                			{% if is_granted('ROLE_ADMIN') %}
-			                        		<a data-toggle="modal" href="{{ path('llistat_editar', { 'tipus': tipus, 'id':i.num }) }}" data-target="#editarLlistat" class="btn btn-xs btn-primary" type="button"><i class="icon-pencil"></i></a>
-			                        		<a data-toggle="modal" href="{{ path('llistat_eliminar', { 'tipus': tipus, 'id':i.num }) }}" data-target="#eliminarLlistat" class="btn btn-xs btn-danger" type="button"><i class="icon-remove"></i></a>
+			                        		<a data-toggle="modal" href="{{ path('llistat_editar', { 'tipus': tipus,'nom': i.nom, 'id':i.num }) }}" data-target="#editarLlistat" class="btn btn-xs btn-primary" type="button"><i class="icon-pencil"></i></a>
+			                        		<a data-toggle="modal" href="{{ path('llistat_eliminar', { 'tipus': tipus,'nom': i.nom, 'id':i.num }) }}" data-target="#eliminarLlistat" class="btn btn-xs btn-danger" type="button"><i class="icon-remove"></i></a>
 			                        	{% endif %}
 		                        	</td>
 			                    </tr>
