--- a/src/ADG/PrincipalBundle/Resources/views/AdminLlistat/editar.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminLlistat/editar.html.twig
@@ -10,6 +10,7 @@
 	      		<p>Es pot modificar següent informació:</p>
 	      		<div class="space10"></div>
 	      		<input type="hidden" name="num" value="{{ info.num }}">
+	      		<input type="hidden" name="nom" value="{{ info.nom }}">
 	      		<input type="hidden" name="tipus" value="{{ tipus }}">
 	      		
       			
