--- a/src/ADG/PrincipalBundle/Resources/views/AdminLlistat/eliminar.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminLlistat/eliminar.html.twig
@@ -10,6 +10,7 @@
 	      		<strong class="text-danger">S'eliminarà l'entrada amb la següent informació:</strong>
 	      		
 	      		<input type="hidden" name="num" value="{{ info.num }}">
+	      		<input type="hidden" name="nom" value="{{ info.nom }}">
 	      		<input type="hidden" name="tipus" value="{{ tipus }}">
 				<h5 style="color: #d9534f">Classificació de l'arxiu</h5><p>{{ info.nodac }}</p>
 				<h5 style="color: #d9534f">Nom de {{ tipus }}</h5><p>{{ info.nom }}</p>
