Removed right margin from rows to fix annoying white space in S devices

--- a/src/ADG/PrincipalBundle/Resources/views/Default/index.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/index.html.twig
@@ -13,7 +13,7 @@
 	            {{ 'index.colaborador' | trans}}
 	        </div>
 	        
-	        <div class="col-lg-8">
+	        <div class="col-lg-8" style="padding-right: 0px;">
 	            <div class="page-header"><h1>{{ 'index.noticies.title' | trans}}</h1></div>
 	            
 	            {% for noticia in noticies %}
