--- a/src/ADG/ArxiuBundle/Resources/views/Default/arxiu.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Default/arxiu.html.twig
@@ -9,8 +9,9 @@
 	</div>
 	<div class="row">
 		<div class="col-md-7 col-lg-7" style="padding-right: 0px;">
-			<p>L’Arxiu diocesà conserva la memòria documental de la diòcesi de Girona des del segle IX fins a l’actualitat. Està en primer lloc al servei dels organismes i institucions de la diòcesi per a ajudar especialment la seva gestió administrativa i, també, al servei dels investigadors com una col·laboració de l’Església a la cultura de la nostra societat.</p> 
-			<p>L’Arxiu, per complir la seva funció d’arxiu històric de la diòcesi va rebent tota la documentació generada pels diversos organismes de la Cúria diocesana, igualment de les altres entitats o associacions públiques de la diòcesi. També conserva la documentació dels arxius parroquials de més de 100 anys d’acord amb les disposicions diocesanes.</p>
+			<article>L’Arxiu diocesà conserva la memòria documental de la diòcesi de Girona des del segle IX fins a l’actualitat. Està en primer lloc al servei dels organismes i institucions de la diòcesi per a ajudar especialment la seva gestió administrativa i, també, al servei dels investigadors com una col·laboració de l’Església a la cultura de la nostra societat.</article> 
+			<br>
+			<article>L’Arxiu, per complir la seva funció d’arxiu històric de la diòcesi va rebent tota la documentació generada pels diversos organismes de la Cúria diocesana, igualment de les altres entitats o associacions públiques de la diòcesi. També conserva la documentació dels arxius parroquials de més de 100 anys d’acord amb les disposicions diocesanes.</article>
 		</div>
 		<div class="col-md-5 col-lg-5">
 			Foto llibre:todo
