--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -1,9 +1,6 @@
 		    <div class="footer-wrapper">
 		    	<footer>
-		    		
-					<h4>{{ 'base.title' | trans }}</h4>
-					
-					<div class="row" style="margin-bottom: 5px;margin-left: 0px;margin-right: 0px">
+					<div class="row" style="margin-top: 10px;margin-bottom: 5px;margin-left: 0px;margin-right: 0px">
 						<a class="foot" href="{{ path('contacte') }}">
 							<i class="icon-envelope"></i>
 							{{ 'base.contacte' | trans }}
