--- a/web/bundles/ADG/css/comu.css
+++ b/web/bundles/ADG/css/comu.css
@@ -30,26 +30,26 @@ html, body, .container, .content {
     min-height: 100%;
     height: auto !important;
     height: 100%;
-    margin: 0 auto -90px; /* same as the footer */
+    margin: 0 auto -65px; /* same as the footer */
 }
  
 .push {
-    height: 90px; /* same as the footer */
+    height: 65px; /* same as the footer */
 }
 
 .footer-wrapper {
     position: relative;
-    height: 90px;
+    height: 65px;
     text-align: center;
-    background-color: #222222;
-  	border-color: #080808;
-  	color: #999;
   	border-top: 1px solid transparent;
 }
 
 a.foot {
-	color: #999;
 	margin-right: 10px;
+}
+a.foot:hover, a.foot:focus {
+	color: #ffffff;
+	text-decoration: inherit;
 }
 
 .account-container {
@@ -90,7 +90,6 @@ article {
 .lessMarginBot{
 	margin-bottom:-1px;
 }
-
 pre {
 	padding: 0;
 	background: inherit;
@@ -98,6 +97,34 @@ pre {
 	border: none;
 	text-align: justify;
 	padding-right: 15px;
+}
+
+/* Navbars and footer Color styles */
+.navbar-inverse, .dropdown-menu>.active>a, .dropdown-menu>.active>a:hover, .dropdown-menu>.active>a:focus,
+.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus, .footer-wrapper {
+	background-color: #800000;
+	border-color: #660000;
+}
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus,
+.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus,
+.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus {
+	background-color: #660000;
+}
+.navbar-inverse .navbar-nav>li>a, .navbar-inverse .navbar-brand, footer, a.foot {
+	color: #F5F1DE;
+}
+.navbar-inverse .navbar-nav>.dropdown>a .caret, .navbar-inverse .navbar-nav>.dropdown>a .caret {
+	border-top-color: #F5F1DE;
+	border-bottom-color: #F5F1DE;
+}
+.navbar-inverse .navbar-toggle {
+	border-color: #660000;
+}
+
+/* Texts color styles*/
+.page-header {
+	color: #800000;
+	border-bottom: 1px solid #800000;
 }
 
 /* Vertical spacers */
