Updated contacte & biblioteca

--- a/src/ADG/PrincipalBundle/Resources/views/Default/contacte.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/contacte.html.twig
@@ -17,32 +17,29 @@
 	        <div class="col-md-5 col-lg-5">
 	            <h3>Informació</h3>
 	            <address> 	
-	                <strong>Arxiu diocesà i Biblioteca diocesana del Seminari de Girona</strong><br>
 	                Pujada Sant Martí,12<br>
 	                17004, GIRONA
 	            </address>
-	
-	            <address><strong>Telèfon</strong><br> 972 48 73 46</address>
-	    
+	            <address>
+	            	<strong>Telèfon</strong><br>
+	            	972 48 73 46
+	            </address>
+	    		<hr>
+	    		
 	            <h3>Contactes</h3>
 	            
-	            <address><strong>Arxiu diocesà:</strong>
-	            info@arxiuadg.org</address>
-	
-	            <address><strong>Biblioteca:</strong>
-	            biblioteca@bisbatgirona.cat</address>
-	
-	            <address><strong>Director</strong>
-	            Llic. Joan Naspleda</address>
-	
-	            <address><strong>Oficial Arxiu i Biblioteca</strong>
-	            Llic. Albert Serrat</address>
-	
-	            <address><strong>Oficial arxiver</strong>
-	            Llic. Joan Villar</address>
-	
-	            <address><strong>Oficial biblioteca</strong>
-	            Llic. Anna Bancells</address>
+	            <p>info@arxiuadg.org<br>
+				arxiu@catedraldegirona.org</p>
+				
+				<p>
+					<b>Director</b><br>
+					Llic. Joan Naspleda<br> 
+		            <b>Arxivers</b><br>
+					Llic. Albert Serrat <br>
+					Llic. Joan Villar<br> 
+					<b>Bibliotecària</b><br>
+					Llic. Anna Bancells
+				</p>
 	
 	            <p><strong>Horari</strong><br>
 	            De dilluns a dijous, de 16 h a 20 h<br>
