--- a/src/ADG/PrincipalBundle/Resources/views/Default/index.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/index.html.twig
@@ -14,7 +14,7 @@
 	        </div>
 	        
 	        <div class="col-lg-8" style="padding-right: 0px;">
-	            <div class="page-header"><h1>{{ 'index.noticies.title' | trans}}</h1></div>
+	            <div class="page-header"><h3 style="margin: 0">{{ 'index.noticies.title' | trans}}</h3></div>
 	            
 	            {% for noticia in noticies %}
             		<article>
