--- a/src/ADG/BibliotecaBundle/Resources/views/Default/index.html.twig
+++ b/src/ADG/BibliotecaBundle/Resources/views/Default/index.html.twig
@@ -6,5 +6,29 @@
 	<div class="page-header">
         <h1>Biblioteca</h1>
 	</div>
-	<iframe src="http://www.arxiuadg.org/biblioteca" style="width:100%; height: 100%"></iframe>
+	
+	<div style="margin-bottom: 10px">
+		<button id="cataleg" class="btn btn-primary" onclick="changeSrc('cataleg')">Càtaleg general</button>
+		<button id="antiquaria" class="btn btn-default" onclick="changeSrc('antiquaria')">Fons d'Antiquària</button>
+	</div>
+	
+	<iframe id="biblioFrame" src="http://www.arxiuadg.org/biblioteca" style="width:100%; height: 100%"></iframe>
+{% endblock %}
+
+{% block javascripts %}
+ 	<script type="text/javascript">
+		function changeSrc(srcvalue)
+	    {
+	    	if(srcvalue == "cataleg") {
+	    		document.querySelector("#biblioFrame").src="http://www.arxiuadg.org/biblioteca";
+	    		document.querySelector("#cataleg").className="btn btn-primary";
+	    		document.querySelector("#antiquaria").className="btn btn-default";
+		   	}
+	    	else {
+	    		document.querySelector("#biblioFrame").src="http://www.arxiuadg.org/udg_previ.php";
+	    		document.querySelector("#antiquaria").className="btn btn-primary";
+	    		document.querySelector("#cataleg").className="btn btn-default";
+			}
+	    }
+    </script>
 {% endblock %}
