--- a/src/ADG/ArxiuBundle/Resources/views/Guia/guia.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Guia/guia.html.twig
@@ -6,19 +6,15 @@
 	{{ parent() }}
 {% endblock %}
 
-
 {% block javascripts %}
 	{{ parent() }}
 {% endblock %}
-
-
 
 {% block body %}
 
 	<div class="page-header">
         <h1>{{ 'guia.header' | trans }}</h1>
 	</div>
-
 
 {% for flashMessage in app.session.flashbag.get('success') %}
 <div class="row" style="margin-left:0px ">
@@ -43,12 +39,12 @@
 	
 <div class="row" style="margin-left:0px ">
 	<div class="col-md-7 col-lg-7 well">
-		<div class="row" style="padding-left:5px;padding-right: 10px;">
-			<div class="col-sm-6 col-md-6 col-lg-6">
-				<h4>Continguts:</h4>
+		<div class="row" style="padding-left:15px;padding-right:0px;">
+			<div class="col-xs-4 col-sm-6 col-md-6 col-lg-6">
+				<h4>{{ 'general.continguts' | trans }}:</h4>
 			</div>
-			<div class="col-sm-6 col-md-6 col-lg-6">
-				<a style="float:right;margin-top: 10px;margin-bottom: 10px;" class="btn btn-default" href="{{ path('antiga', { 'seleccio': 'repertoris_anitcs' }) }}">
+			<div class="col-xs-8 col-sm-6 col-md-6 col-lg-6" style="padding-right: 0px">
+				<a style="float:right;margin-right: -15px;margin-top: 10px;margin-bottom: 10px;" class="btn btn-default" href="{{ path('antiga', { 'seleccio': 'repertoris_anitcs' }) }}">
 					<i class="icon-list"></i>&nbsp;Veure guia antiga
 				</a>
 			</div>
