--- a/src/ADG/ArxiuBundle/Resources/views/Llistat/llistat.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Llistat/llistat.html.twig
@@ -139,8 +139,9 @@
 					<table class="table table-striped table-bordered table-hover imprimir" id="llistat_table">
 				        <thead>
 				            <tr>
-				            	<th class="centered-text">{{ 'llistat.taula.nom' | trans }}</th>       
-				                <th class="centered-text" id="idHeader" title="Tooltip!">{{ 'llistat.taula.nodac' | trans }}</th>
+				            	<th class="centered-text">{{ 'llistat.taula.nom' | trans }}</th>
+				            	<th class="centered-text" id="idHeader" title="Tooltip!">{{ 'llistat.taula.num' | trans }}</th>         
+				                <th class="centered-text">{{ 'llistat.taula.nodac' | trans }}</th>
 							    <th class="centered-text noimprimir">{{ 'llistat.taula.operacions' | trans }}</th>            
 				            </tr>
 				        </thead>
@@ -148,6 +149,7 @@
 			                {% for i in info %}
 			                    <tr>
 			                    	<td style="min-width: 100px">{{ i.nom }}</td>
+			                    	<td >{{ i.num }}</td>
 			                        <td >{{ i.nodac }}</td>
 		                        	<td class="noimprimir">
 		                        		<a data-toggle="modal" href="{{  path('llistat_detall', {'nom': i.nom, 'id':i.num}) }}" data-target="#ampliarInfo" class="btn btn-sm btn-info" type="button"><i class="icon-info"></i></a>
