--- a/src/ADG/BibliotecaBundle/Resources/views/Default/index.html.twig
+++ b/src/ADG/BibliotecaBundle/Resources/views/Default/index.html.twig
@@ -12,7 +12,7 @@
 		<button id="antiquaria" class="btn btn-default" onclick="changeSrc('antiquaria')">Fons d'Antiquària</button>
 	</div>
 	
-	<iframe id="biblioFrame" src="http://www.arxiuadg.org/biblioteca" style="width:100%; height: 100%"></iframe>
+	<iframe id="biblioFrame" src="http://www.arxiuadg.org/biblioteca" style="width:100%; height: 100%;min-height: 720px;"></iframe>
 {% endblock %}
 
 {% block javascripts %}
