Fixed wrong text

--- a/src/ADG/ArxiuBundle/Resources/views/Parroquies/detall.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Parroquies/detall.html.twig
@@ -9,7 +9,7 @@
 	      		<h4>Parròquia</h4>
 	      		{% if info.nom is not null and info.nom is not empty %}<h5 style="color: #3a87ad">Nom de la parròquia</h5><p>{{ info.nom }}</p>{% endif %}
 	      		{% if info.descripcio is not null and info.descripcio is not empty %}<h5 style="color: #3a87ad">Descripció</h5><p>{{ info.descripcio }}</p>{% endif %}
-	      		{% if info.bibliografia is not null and info.bibliografia is not empty %}<h5 style="color: #3a87ad">Nom de la parròquia</h5><p>{{ info.bibliografia }}</p>{% endif %}
+	      		{% if info.bibliografia is not null and info.bibliografia is not empty %}<h5 style="color: #3a87ad">Bibliografia</h5><p>{{ info.bibliografia }}</p>{% endif %}
 	
 	      		<div class="space10"></div>
 	      		<h4>Arxius dipositats</h4>
