--- a/src/ADG/ArxiuBundle/Resources/views/Dispenses/detall.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Dispenses/detall.html.twig
@@ -34,28 +34,9 @@
       		
       		</div>
       		
-      		{% if is_granted('ROLE_USER') %} 
-      			{% for d in document %}
-      				{% if d is not null and d is not empty %}
-	      				<a  class="btn btn-info" type="button" style="margin-bottom:5px;"href="{{ d }}">
-	      					<img src="{{ asset('bundles/ADG/img/pdf-icon.gif') }}"/>
-	      					&nbsp;Veure document&nbsp;
-	      				</a>
-	      			{% elseif loop.first %}
-	      				<div class="alert alert-warning">
-		            		La imatge digitalitzada d'aquest document no està disponible.
-		            	</div>
-	      			{% endif %} 
-      			{% else %}
-      				<div class="alert alert-warning">
-	            		La imatge digitalitzada d'aquest document és consultable a l'Arxiu Diocesà. 
-	            	</div>
-      			{% endfor %}
-      		{% else %}
-      			<div class="alert alert-warning">
-	            	La imatge digitalitzada d'aquest document és consultable a l'Arxiu Diocesà. 
-	            </div>
-      		{% endif %}
+      		<div class="alert alert-info">
+	         	La imatge digitalitzada d'aquest document és consultable a l'Arxiu Diocesà. 
+	        </div>
         </div>
         
         <div class="modal-footer">
