--- a/src/ADG/PrincipalBundle/Resources/views/Default/contacte.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/contacte.html.twig
@@ -16,20 +16,24 @@
 
 	        <div class="col-md-5 col-lg-5">
 	            <h3>Informació</h3>
-	            <address> 	
-	                Pujada Sant Martí,12<br>
+	            <address>
+	            	<i class="icon-map-marker"></i> 	
+	                Pujada Sant Martí, 12<br>
 	                17004, GIRONA
 	            </address>
 	            <address>
 	            	<strong>Telèfon</strong><br>
-	            	972 48 73 46
+	     		        <i class="icon-phone"></i>
+		            	972 48 73 46
 	            </address>
 	    		<hr>
 	    		
 	            <h3>Contactes</h3>
-	            
-	            <p>info@arxiuadg.org<br>
-				arxiu@catedraldegirona.org</p>
+		            <address>
+		            <a class="icon-envelope-alt" href="mailto:info@arxiuadg.org" target="_top">&nbsp;info@arxiuadg.org</a>
+		            <br>
+					<a class="icon-envelope-alt" href="mailto:arxiu@catedraldegirona.org" target="_top">&nbsp;arxiu@catedraldegirona.org</a>
+					</address>
 				
 				<p>
 					<b>Director</b><br>
