--- a/src/ADG/PrincipalBundle/Resources/views/Default/capitular.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/capitular.html.twig
@@ -8,10 +8,11 @@
 	</div>
 	<div class="row">
 		<div class="col-md-7 col-lg-7">
-			<em>{{ 'capitular.avis' | trans }}</em>
+			<object data="{{ asset('bundles/ADG/docs/capitular.pdf') }}" type="application/pdf" style="width: 100%;height:100%;min-height: 550px;"></object>
 		
 		</div>
 		<div class="col-md-5 col-lg-5">
+			<img class="imatges" src="{{ asset('bundles/ADG/img/capitular.png') }}"/>
 		</div>
 	</div>
 {% endblock %}
