Fixed cover padding problem

--- a/src/ADG/PrincipalBundle/Resources/views/Default/index.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/index.html.twig
@@ -9,7 +9,7 @@
 
 		
 		<div class="row" style="margin-top: 20px">
-	        <div class="col-lg-4" align="center">
+	        <div class="col-lg-4 coverInfoCol" align="center">
 	        	<div class="space100 visible-lg"></div>
 	            <div class="coverInfo">
 	            
