--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -50,6 +50,11 @@
 				$(name).printThis();
 			}	         
 	    </script>
+	    <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
+		<script type="text/javascript">
+			_uacct = "UA-1248411-1";
+			urchinTracker();
+		</script> 
         {% block javascripts %}{% endblock %}
         
     </body>
