--- a/src/ADG/BibliotecaBundle/Resources/views/Default/index.html.twig
+++ b/src/ADG/BibliotecaBundle/Resources/views/Default/index.html.twig
@@ -12,7 +12,7 @@
 		<button id="antiquaria" class="btn btn-default" onclick="changeSrc('antiquaria')">Fons d'Antiquària</button>
 	</div>
 	
-	<iframe id="biblioFrame" src="http://www.arxiuadg.org/biblioteca" style="width:100%; height: 100%;min-height: 720px;"></iframe>
+	<iframe id="biblioFrame" src="/oldArxiu/biblioteca/index.php" style="width:100%; height: 100%;min-height: 720px;"></iframe>
 {% endblock %}
 
 {% block javascripts %}
@@ -20,12 +20,12 @@
 		function changeSrc(srcvalue)
 	    {
 	    	if(srcvalue == "cataleg") {
-	    		document.querySelector("#biblioFrame").src="http://www.arxiuadg.org/biblioteca";
+	    		document.querySelector("#biblioFrame").src="/oldArxiu/biblioteca/index.php";
 	    		document.querySelector("#cataleg").className="btn btn-primary";
 	    		document.querySelector("#antiquaria").className="btn btn-default";
 		   	}
 	    	else {
-	    		document.querySelector("#biblioFrame").src="http://www.arxiuadg.org/udg_previ.php";
+	    		document.querySelector("#biblioFrame").src="/oldArxiu/udg_previ.php";
 	    		document.querySelector("#antiquaria").className="btn btn-primary";
 	    		document.querySelector("#cataleg").className="btn btn-default";
 			}
