--- a/src/ADG/BibliotecaBundle/Resources/views/Default/index.html.twig
+++ b/src/ADG/BibliotecaBundle/Resources/views/Default/index.html.twig
@@ -1,14 +1,14 @@
 {% extends '::base.html.twig' %}
 
-{% block title %}Biblioteca{% endblock %}
+{% block title %}Biblioteca diocesana del seminari{% endblock %}
 
 {% block body %}
 	<div class="page-header">
-        <h1>Biblioteca</h1>
+        <h1>Biblioteca diocesana del seminari</h1>
 	</div>
 	
 	<div style="margin-bottom: 10px">
-		<button id="cataleg" class="btn btn-primary" onclick="changeSrc('cataleg')">Càtaleg general</button>
+		<button id="cataleg" class="btn btn-primary" onclick="changeSrc('cataleg')">Catàleg general</button>
 		<button id="antiquaria" class="btn btn-default" onclick="changeSrc('antiquaria')">Fons d'Antiquària</button>
 	</div>
 	
