--- a/src/ADG/PrincipalBundle/Resources/views/Default/capitular.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/capitular.html.twig
@@ -7,11 +7,13 @@
         <h1>{{ 'capitular.title' | trans }}</h1>
 	</div>
 	<div class="row">
-		<div class="col-md-7 col-lg-7">
+		<div class="col-md-12 col-lg-12">
 			<object data="{{ asset('bundles/ADG/docs/capitular.pdf') }}" type="application/pdf" style="width: 100%;height:100%;min-height: 550px;"></object>
 		
 		</div>
-		<div class="col-md-5 col-lg-5">
+	</div>
+	<div class="row">
+		<div class="col-lg-offset-4 col-md-offset-4 col-md-5 col-lg-5">
 			<img class="imatges" src="{{ asset('bundles/ADG/img/capitular.png') }}"/>
 		</div>
 	</div>
