Fixed modal flicker problem

--- a/src/ADG/ArxiuBundle/Resources/views/Dispenses/dispenses.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Dispenses/dispenses.html.twig
@@ -53,8 +53,8 @@
 	        })
 		} );
 	
-		$(document).on('hidden.bs.modal', function (e) {
-		    $(e.target).removeData('bs.modal');
+		$(document).on("hidden.bs.modal", function (e) {
+		    $(e.target).removeData("bs.modal").find(".modal-content").empty();
 		});
 	</script>
 
