--- a/src/ADG/ArxiuBundle/Resources/views/Parroquies/parroquies.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Parroquies/parroquies.html.twig
@@ -6,9 +6,9 @@
 	{{ parent() }}
 	
     <script>   
-		$(document).on('hidden.bs.modal', function (e) {
-		    $(e.target).removeData('bs.modal');
-		});
+    $(document).on("hidden.bs.modal", function (e) {
+	    $(e.target).removeData("bs.modal").find(".modal-content").empty();
+	});
 	</script>
 {% endblock %}
 
