--- a/src/ADG/PrincipalBundle/Resources/views/AdminUsuaris/usuaris.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminUsuaris/usuaris.html.twig
@@ -8,29 +8,28 @@
 {% block javascripts %} 
 	
     <script>   
-	$(document).ready(function() {
-		$('#usuaris_table').dataTable({
-                "sDom": "<'col-xs-4'l> <'col-xs-offset-1'f> rt <'col-xs-4'i><'col-xs-offset-1'p>",
-                "language": {
-        			"sLengthMenu": "_MENU_ entrades per pàgina",
-        			"sZeroRecords": "No s'ha trobat res",
-        			"sInfo": "Trobades _TOTAL_ entrades",
-        			"sInfoEmpty": "0 entrades trobades",
-        			"sInfoFiltered": "(filtrades desde _MAX_ entrades totals)",
-        			"oPaginate": {
-        		        "sNext": "Següent",
-        		        "sPrevious": "Anterior"
-        		      },
-        			"sSearch": "Cerca general: "
-                }
-        })
-	} );
-
-	$(document).on('hidden.bs.modal', function (e) {
-	    $(e.target).removeData('bs.modal');
-	});
+		$(document).ready(function() {
+			$('#usuaris_table').dataTable({
+	                "sDom": "<'col-xs-4'l> <'col-xs-offset-1'f> rt <'col-xs-4'i><'col-xs-offset-1'p>",
+	                "language": {
+	        			"sLengthMenu": "_MENU_ entrades per pàgina",
+	        			"sZeroRecords": "No s'ha trobat res",
+	        			"sInfo": "Trobades _TOTAL_ entrades",
+	        			"sInfoEmpty": "0 entrades trobades",
+	        			"sInfoFiltered": "(filtrades desde _MAX_ entrades totals)",
+	        			"oPaginate": {
+	        		        "sNext": "Següent",
+	        		        "sPrevious": "Anterior"
+	        		      },
+	        			"sSearch": "Cerca general: "
+	                }
+	        })
+		} );
 	
-		</script>
+		$(document).on("hidden.bs.modal", function (e) {
+		    $(e.target).removeData("bs.modal").find(".modal-content").empty();
+		});
+	</script>
 
     <script src="{{ asset('bundles/ADG/js/jquery.dataTables.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/ADG/js/dataTables.bootstrap.js') }}" type="text/javascript"></script>
