--- a/src/ADG/ArxiuBundle/Resources/views/GuiaAntiga/arxius_dipositats.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/GuiaAntiga/arxius_dipositats.html.twig
@@ -1,3 +1,3 @@
 <div id="new_section_content">
-<object data="{{ asset('bundles/ADG/docs/arxiusDipositats.pdf') }}" type="application/pdf" style="width: 100%;height:100%;min-height: 650px;"></object>						
+<object data="{{ asset('bundles/ADG/docs/arxiusDipositats.pdf') }}" type="application/pdf" style="width: 100%;height:100%;min-height: 650px; -webkit-overflow-scrolling:touch"></object>						
 </div>
