--- a/src/ADG/PrincipalBundle/Resources/views/Default/capitular.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/capitular.html.twig
@@ -8,7 +8,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-12 col-lg-12">
-			<object data="{{ asset('bundles/ADG/docs/capitular.pdf') }}" type="application/pdf" style="width: 100%;height:100%;min-height: 550px;"></object>
+			<object data="{{ asset('bundles/ADG/docs/capitular.pdf') }}" type="application/pdf" style="width: 100%;height:100%;min-height: 550px; -webkit-overflow-scrolling:touch"></object>
 		
 		</div>
 	</div>
